# rsi-exit

./: .gitignore  README.md  pyproject.toml  requirements-amazingdata.txt  requirements.txt
.github/workflows/: tests.yml
config/: rsi_exit_v01.yaml  rsi_exit_v02.yaml  rsi_exit_v03.yaml  rsi_exit_v04.yaml
docs/: rsi_exit_v01.md  rsi_exit_v02.md
docs/plans/: rsi_exit_v0.4_implementation_plan_v0.1.md
docs/releases/: rsi_exit_v0.3.0_freeze_manifest.md  rsi_exit_v0.4.0_freeze_manifest.md
docs/specs/: rsi_exit_v0.3_top_divergence_spec_v0.2.md  rsi_exit_v0.4_warning_layer_draft_v0.1.md  rsi_exit_v0.4_warning_lifecycle_spec.md
rsi_exit/: __init__.py  actionability.py  cli.py  config.py  divergence.py  freeze_baseline.py  freeze_baseline_v04.py  indicators.py  models.py  peak_detector.py  pipeline.py  plotting.py  position_rules.py  release_check.py  reporting.py  state_machine.py  validation.py  warning_events.py
scripts/: run_v04_phase41_actionability.py  run_v04_phase4_validation.py
tests/: test_data_adapter.py  test_divergence.py  test_freeze_baseline.py  test_peak_detector.py  test_pipeline.py  test_release_check.py  test_rsi.py  test_state_machine.py  test_v021_regressions.py  test_v02_regressions.py  test_v03_divergence.py  test_v03_forming_and_cycles.py  test_v03_frozen_baseline.py  test_v03_sanitized_regression.py  test_v040_release_freeze.py  test_v041_warning_actionability.py  test_v04_multisample_validation.py  test_v04_warning_events.py  test_v04_warning_lifecycle.py  test_v04_warning_reporting.py  test_version.py
validation/: v04_phase4_samples.csv
(+16 files in other folders)
