[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rsi-exit"
version = "0.2.1"
description = "A-share trend-stock RSI exit signal recognizer"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2,<3",
  "numpy>=2.0,<3",
  "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
test = ["pytest>=8,<9"]
amazingdata = ["pydantic>=2,<3", "tables>=3.10,<4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rsi_exit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
